# flatbuffers

./: .gitignore  BUILD.gn  readme.md
include/flatbuffers/: flatbuffers.h  idl.h
src/: idl_gen_text.cpp  idl_parser.cpp
tests/: gen_mutate_test.sh  mutate_test.fbs  mutate_test_generated.h  stat-numeric.json  stat.json  test.cpp
