# ==================================================

config("flatbuffers_config") {
  include_dirs = [ "include" ]
}

static_library("flatbuffers") {
  sources = [
    # headers
    "include/flatbuffers/flatbuffers.h",
    "include/flatbuffers/idl.h",
    "include/flatbuffers/util.h",
    
    "src/idl_parser.cpp",
    "src/idl_gen_cpp.cpp",
    "src/idl_gen_general.cpp",
    "src/idl_gen_go.cpp",
    "src/idl_gen_text.cpp",
    "src/idl_gen_fbs.cpp",
    "src/flatc.cpp",
  ]
  
  public_configs = [ ":flatbuffers_config" ]
}

