# ==================================================

config("flatbuffers_config") {
  include_dirs = [ "include" ]
}

static_library("flatbuffers") {
  sources = [
    # headers
    "include/flatbuffers/flatbuffers.h",
    "include/flatbuffers/idl.h",
    "include/flatbuffers/util.h",
    
    "src/idl_parser.cpp",
    "src/idl_gen_cpp.cpp",
    "src/idl_gen_general.cpp",
    "src/idl_gen_go.cpp",
    "src/idl_gen_text.cpp",
    "src/idl_gen_fbs.cpp",
  ]
  
  public_configs = [ ":flatbuffers_config" ]
}

executable("flatc") {
  sources = [ "src/flatc.cpp" ]
  deps = [
    ":flatbuffers",
  ]
}

executable("test") {
  sources = [ "tests/test.cpp" ]
  deps = [
    ":flatbuffers",
  ]
}

executable("sample_binary") {
  sources = [ "samples/sample_binary.cpp" ]
  deps = [
    ":flatbuffers",
  ]
}

executable("sample_text") {
  sources = [ "samples/sample_text.cpp" ]
  deps = [
    ":flatbuffers",
  ]
}
